--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,4 @@
 language: java
+sudo: false
+install: cd dubbo-spring-boot-starter && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
+install: cd spring-boot-starter-parent && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
