--- a/spring-boot-starter-test/pom.xml
+++ b/spring-boot-starter-test/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>spring-boot-starter-test</artifactId>
+    <modelVersion>4.0.0</modelVersion>
 
 
     <dependencies>
