--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,5 @@ language: java
 sudo: false
 install: cd dubbo-spring-boot-starter && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
 install: cd spring-boot-starter-parent && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
+compile: cd spring-boot-starter-test && mvn compile
+install: mvn install
