--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: java
 sudo: false
-install: cd dubbo-spring-boot-starter && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
-install: cd spring-boot-starter-parent && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
-install: cd spring-boot-starter-test && mvn compile
+jdk:
+  -oraclejdk8
+script:
+  - mvn clean
+  - cd dubbo-spring-boot-starter && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
+  - cd spring-boot-starter-parent && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
