测试ci通过率

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@ language: java
 sudo: false
 jdk:
   - oraclejdk8
-install:
-  - cd dubbo-spring-boot-starter && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
-  - cd spring-boot-starter-parent && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
+
+install: cd dubbo-spring-boot-starter && mvn install -DskipTests=true -Dmaven.javadoc.skip=true && cd spring-boot-starter-parent && mvn install -DskipTests=true -Dmaven.javadoc.skip=true
 
 script:
   - cd spring-boot-starter-test && mvn compile
