--- a/spring-boot-starter-parent/pom.xml
+++ b/spring-boot-starter-parent/pom.xml
@@ -10,6 +10,7 @@
     <artifactId>spring-boot-starter-parent</artifactId>
     <groupId>com.fibbery</groupId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
