--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.test.skip>true</maven.test.skip>
         <skipTests>true</skipTests>
+	<hello.version>2.0.0<hello.version>
 
         <dubbo.version>2.6.0</dubbo.version>
     </properties>
