--- a/spring-boot-starter-test/dubbo-demo-api/src/main/resources/application.properties
+++ b/spring-boot-starter-test/dubbo-demo-api/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-dubbo.scan-package=demo
-dubbo.application.name=test
+dubbo.scan-package=com.fibbery.demo
+dubbo.application.name=demo-provider
 dubbo.registry.register=false
+
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
